# idea-factory

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: claude.yml
config/: founder.json  funnel.json  sources.json
config/llm/: ask.json  critique.json  generate.json  judge.json  persona_pressure.json  persona_sim.json  prices.json  retro_lesson.json
data/raw/: inbox.jsonl  personas.json  sample_products.json  sample_signals.json
dify/: import_flows.py
dify/flows/: README.md  idea-critique.yml  idea-gen.yml  idea-judge.yml
docs/: cn-source-runbook.md  dify-handoff.md  dify-public-deploy-di.md  dify-public-hardening.md  project-brief.md  self-iteration-runbook.md
docs/design/: agent-service-plan.md  architecture-flow.md  dify-integration.md  dify-prompt-authoring.md  dynamic-sources.md  idea-funnel.md  llm-abstraction.md  pipeline-v2-plan.md
docs/research/: 00-executive-summary-and-roadmap.md  01-idea-generation-discovery-projects.md  02-agent-orchestration-frameworks.md  03-quant-investing-paradigms.md  04-external-signal-sources-and-trend-detection.md  05-painpoint-mining-persona-simulation.md  06-idea-evaluation-methodology.md  07-automated-idea-hypothesis-generation.md  08-commercial-saas-competitors.md  README.md  (+2 more)
reference/: README.md  miner-template.md  sources.yaml  sync-source.sh
scripts/: round_report.py  weekly-run.sh
studio/: README.md
tests/: test_api.py  test_bet_memos.py  test_calibrate.py  test_cli_calibrate.py  test_cli_retro.py  test_cli_stats.py  test_collect.py  test_collect_heat_cap.py  test_dedup.py  test_dify_backend.py  test_dify_mirror_invariant.py  test_enrich.py  test_evaluate.py  test_evaluate_citation.py  test_evaluate_evidence.py  test_factors.py  test_founder.py  test_founder_profile.py  test_funnel.py  test_fusion.py  test_generate.py  test_hello.py  test_ledger.py  test_llm.py  test_llm_cost.py  test_llm_steps.py  test_match.py  test_models_v2.py  test_money_trace.py  test_new_recall_sources.py  test_persona.py  test_persona_derive.py  test_persona_pressure.py  test_persona_synth.py  test_personas_loader.py  test_pipeline.py  test_pipeline_evidence.py  test_prompt_config_ff2.py  test_rank_cli.py  test_ranks.py  (+14 more)
(+181 files in other folders)
